Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15456

deadlock in ll_new_node() when running racer

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.15.0
    • Lustre 2.14.0, Lustre 2.15.0
    • None
    • 3
    • 9223372036854775807

      ll_new_node() will call ll_dir_getstripe() to fetch parent default LMV if md_create() returns -EREMOTE, but it doesn't call ll_finish_md_op_data() to unlock lli_lsm_sem before ll_dir_getstripe(), which will cause deadlock because the ll_dir_getstripe() will lock lli_lsm_sem again.

            laisiyao Lai Siyao
            laisiyao Lai Siyao
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: